Compiler_StudentID_HW2/y.output
Grammar

    0 $accept: translation_unit $end

    1 translation_unit: external_declaration
    2                 | translation_unit external_declaration

    3 external_declaration: variable_declaration
    4                     | function_declaration
    5                     | function_definition

    6 variable_declaration: type_specifier ID ';'
    7                     | type_specifier ID '=' assignment_expression ';'

    8 function_declaration: type_specifier function_declarator ';'

    9 type_specifier: VOID
   10               | INT
   11               | FLOAT
   12               | STRING
   13               | BOOL

   14 function_declarator: ID '(' ')'
   15                    | ID '(' identifier_list ')'
   16                    | ID '(' parameter_list ')'

   17 identifier_list: ID
   18                | identifier_list ',' ID

   19 parameter_list: parameter_declarator
   20               | parameter_list ',' parameter_declarator

   21 parameter_declarator: type_specifier ID

   22 assignment_expression: unary_expression assignment_operator assignment_expression
   23                      | conditional_expression

   24 unary_expression: postfix_expression
   25                 | INC_OP unary_expression
   26                 | DEC_OP unary_expression
   27                 | unary_operator unary_expression

   28 postfix_expression: primary_expression
   29                   | postfix_expression '(' ')'
   30                   | postfix_expression '(' argument_expression_list ')'
   31                   | postfix_expression INC_OP
   32                   | postfix_expression DEC_OP

   33 primary_expression: ID
   34                   | constant
   35                   | '(' expression ')'

   36 constant: I_CONST
   37         | F_CONST
   38         | TRUE
   39         | FALSE
   40         | STRING_LITERAL

   41 expression: assignment_expression
   42           | expression ',' assignment_expression

   43 argument_expression_list: assignment_expression
   44                         | argument_expression_list ',' assignment_expression

   45 unary_operator: '+'
   46               | '-'
   47               | '!'

   48 assignment_operator: '='
   49                    | MUL_ASSIGN
   50                    | DIV_ASSIGN
   51                    | MOD_ASSIGN
   52                    | ADD_ASSIGN
   53                    | SUB_ASSIGN

   54 conditional_expression: logical_or_expression
   55                       | logical_or_expression '?' expression ':' conditional_expression

   56 logical_or_expression: logical_and_expression
   57                      | logical_or_expression OR_OP logical_and_expression

   58 logical_and_expression: equality_expression
   59                       | logical_and_expression AND_OP equality_expression

   60 equality_expression: relational_expression
   61                    | equality_expression EQ_OP relational_expression
   62                    | equality_expression NE_OP relational_expression

   63 relational_expression: additive_expression
   64                      | relational_expression '<' additive_expression
   65                      | relational_expression '>' additive_expression
   66                      | relational_expression LE_OP additive_expression
   67                      | relational_expression GE_OP additive_expression

   68 additive_expression: multiplicative_expression
   69                    | additive_expression '+' multiplicative_expression
   70                    | additive_expression '-' multiplicative_expression

   71 multiplicative_expression: unary_expression
   72                          | multiplicative_expression '*' unary_expression
   73                          | multiplicative_expression '/' unary_expression
   74                          | multiplicative_expression '%' unary_expression

   75 function_definition: type_specifier function_declarator compound_statement

   76 compound_statement: '{' '}'
   77                   | '{' block_item_list '}'

   78 block_item_list: block_item
   79                | block_item_list block_item

   80 block_item: variable_declaration
   81           | statement

   82 statement: compound_statement
   83          | expression_statement
   84          | selection_statement
   85          | iteration_statement
   86          | jump_statement
   87          | print_statement

   88 expression_statement: ';'
   89                     | expression ';'

   90 selection_statement: IF '(' expression ')' statement
   91                    | IF '(' expression ')' statement ELSE statement

   92 iteration_statement: WHILE '(' expression ')' statement
   93                    | FOR '(' expression_statement expression_statement ')' statement
   94                    | FOR '(' expression_statement expression_statement expression ')' statement
   95                    | FOR '(' variable_declaration expression_statement ')' statement
   96                    | FOR '(' variable_declaration expression_statement expression ')' statement

   97 jump_statement: RETURN ';'
   98               | RETURN expression ';'

   99 print_statement: PRINT '(' ID ')' ';'
  100                | PRINT '(' STRING_LITERAL ')' ';'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 47
'%' (37) 74
'(' (40) 14 15 16 29 30 35 90 91 92 93 94 95 96 99 100
')' (41) 14 15 16 29 30 35 90 91 92 93 94 95 96 99 100
'*' (42) 72
'+' (43) 45 69
',' (44) 18 20 42 44
'-' (45) 46 70
'/' (47) 73
':' (58) 55
';' (59) 6 7 8 88 89 97 98 99 100
'<' (60) 64
'=' (61) 7 48
'>' (62) 65
'?' (63) 55
'{' (123) 76 77
'}' (125) 76 77
error (256)
IF (258) 90 91
ELSE (259) 91
FOR (260) 93 94 95 96
WHILE (261) 92
RETURN (262) 97 98
PRINT (263) 99 100
GE_OP (264) 67
LE_OP (265) 66
EQ_OP (266) 61
NE_OP (267) 62
AND_OP (268) 59
OR_OP (269) 57
INC_OP (270) 25 31
DEC_OP (271) 26 32
ADD_ASSIGN (272) 52
SUB_ASSIGN (273) 53
MUL_ASSIGN (274) 49
DIV_ASSIGN (275) 50
MOD_ASSIGN (276) 51
VOID (277) 9
INT (278) 10
FLOAT (279) 11
STRING (280) 12
BOOL (281) 13
I_CONST (282) 36
F_CONST (283) 37
STRING_LITERAL (284) 40 100
ID (285) 6 7 14 15 16 17 18 21 33 99
TRUE (286) 38
FALSE (287) 39
LOWER_THAN_ELSE (288)


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
translation_unit (52)
    on left: 1 2, on right: 0 2
external_declaration (53)
    on left: 3 4 5, on right: 1 2
variable_declaration (54)
    on left: 6 7, on right: 3 80 95 96
function_declaration (55)
    on left: 8, on right: 4
type_specifier (56)
    on left: 9 10 11 12 13, on right: 6 7 8 21 75
function_declarator (57)
    on left: 14 15 16, on right: 8 75
identifier_list (58)
    on left: 17 18, on right: 15 18
parameter_list (59)
    on left: 19 20, on right: 16 20
parameter_declarator (60)
    on left: 21, on right: 19 20
assignment_expression (61)
    on left: 22 23, on right: 7 22 41 42 43 44
unary_expression (62)
    on left: 24 25 26 27, on right: 22 25 26 27 71 72 73 74
postfix_expression (63)
    on left: 28 29 30 31 32, on right: 24 29 30 31 32
primary_expression (64)
    on left: 33 34 35, on right: 28
constant (65)
    on left: 36 37 38 39 40, on right: 34
expression (66)
    on left: 41 42, on right: 35 42 55 89 90 91 92 94 96 98
argument_expression_list (67)
    on left: 43 44, on right: 30 44
unary_operator (68)
    on left: 45 46 47, on right: 27
assignment_operator (69)
    on left: 48 49 50 51 52 53, on right: 22
conditional_expression (70)
    on left: 54 55, on right: 23 55
logical_or_expression (71)
    on left: 56 57, on right: 54 55 57
logical_and_expression (72)
    on left: 58 59, on right: 56 57 59
equality_expression (73)
    on left: 60 61 62, on right: 58 59 61 62
relational_expression (74)
    on left: 63 64 65 66 67, on right: 60 61 62 64 65 66 67
additive_expression (75)
    on left: 68 69 70, on right: 63 64 65 66 67 69 70
multiplicative_expression (76)
    on left: 71 72 73 74, on right: 68 69 70 72 73 74
function_definition (77)
    on left: 75, on right: 5
compound_statement (78)
    on left: 76 77, on right: 75 82
block_item_list (79)
    on left: 78 79, on right: 77 79
block_item (80)
    on left: 80 81, on right: 78 79
statement (81)
    on left: 82 83 84 85 86 87, on right: 81 90 91 92 93 94 95 96
expression_statement (82)
    on left: 88 89, on right: 83 93 94 95 96
selection_statement (83)
    on left: 90 91, on right: 84
iteration_statement (84)
    on left: 92 93 94 95 96, on right: 85
jump_statement (85)
    on left: 97 98, on right: 86
print_statement (86)
    on left: 99 100, on right: 87


State 0

    0 $accept: . translation_unit $end

    VOID    shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    STRING  shift, and go to state 4
    BOOL    shift, and go to state 5

    translation_unit      go to state 6
    external_declaration  go to state 7
    variable_declaration  go to state 8
    function_declaration  go to state 9
    type_specifier        go to state 10
    function_definition   go to state 11


State 1

    9 type_specifier: VOID .

    $default  reduce using rule 9 (type_specifier)


State 2

   10 type_specifier: INT .

    $default  reduce using rule 10 (type_specifier)


State 3

   11 type_specifier: FLOAT .

    $default  reduce using rule 11 (type_specifier)


State 4

   12 type_specifier: STRING .

    $default  reduce using rule 12 (type_specifier)


State 5

   13 type_specifier: BOOL .

    $default  reduce using rule 13 (type_specifier)


State 6

    0 $accept: translation_unit . $end
    2 translation_unit: translation_unit . external_declaration

    $end    shift, and go to state 12
    VOID    shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    STRING  shift, and go to state 4
    BOOL    shift, and go to state 5

    external_declaration  go to state 13
    variable_declaration  go to state 8
    function_declaration  go to state 9
    type_specifier        go to state 10
    function_definition   go to state 11


State 7

    1 translation_unit: external_declaration .

    $default  reduce using rule 1 (translation_unit)


State 8

    3 external_declaration: variable_declaration .

    $default  reduce using rule 3 (external_declaration)


State 9

    4 external_declaration: function_declaration .

    $default  reduce using rule 4 (external_declaration)


State 10

    6 variable_declaration: type_specifier . ID ';'
    7                     | type_specifier . ID '=' assignment_expression ';'
    8 function_declaration: type_specifier . function_declarator ';'
   75 function_definition: type_specifier . function_declarator compound_statement

    ID  shift, and go to state 14

    function_declarator  go to state 15


State 11

    5 external_declaration: function_definition .

    $default  reduce using rule 5 (external_declaration)


State 12

    0 $accept: translation_unit $end .

    $default  accept


State 13

    2 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 2 (translation_unit)


State 14

    6 variable_declaration: type_specifier ID . ';'
    7                     | type_specifier ID . '=' assignment_expression ';'
   14 function_declarator: ID . '(' ')'
   15                    | ID . '(' identifier_list ')'
   16                    | ID . '(' parameter_list ')'

    ';'  shift, and go to state 16
    '='  shift, and go to state 17
    '('  shift, and go to state 18


State 15

    8 function_declaration: type_specifier function_declarator . ';'
   75 function_definition: type_specifier function_declarator . compound_statement

    ';'  shift, and go to state 19
    '{'  shift, and go to state 20

    compound_statement  go to state 21


State 16

    6 variable_declaration: type_specifier ID ';' .

    $default  reduce using rule 6 (variable_declaration)


State 17

    7 variable_declaration: type_specifier ID '=' . assignment_expression ';'

    INC_OP          shift, and go to state 22
    DEC_OP          shift, and go to state 23
    I_CONST         shift, and go to state 24
    F_CONST         shift, and go to state 25
    STRING_LITERAL  shift, and go to state 26
    ID              shift, and go to state 27
    TRUE            shift, and go to state 28
    FALSE           shift, and go to state 29
    '('             shift, and go to state 30
    '+'             shift, and go to state 31
    '-'             shift, and go to state 32
    '!'             shift, and go to state 33

    assignment_expression      go to state 34
    unary_expression           go to state 35
    postfix_expression         go to state 36
    primary_expression         go to state 37
    constant                   go to state 38
    unary_operator             go to state 39
    conditional_expression     go to state 40
    logical_or_expression      go to state 41
    logical_and_expression     go to state 42
    equality_expression        go to state 43
    relational_expression      go to state 44
    additive_expression        go to state 45
    multiplicative_expression  go to state 46


State 18

   14 function_declarator: ID '(' . ')'
   15                    | ID '(' . identifier_list ')'
   16                    | ID '(' . parameter_list ')'

    VOID    shift, and go to state 1
    INT     shift, and go to state 2
    FLOAT   shift, and go to state 3
    STRING  shift, and go to state 4
    BOOL    shift, and go to state 5
    ID      shift, and go to state 47
    ')'     shift, and go to state 48

    type_specifier        go to state 49
    identifier_list       go to state 50
    parameter_list        go to state 51
    parameter_declarator  go to state 52


State 19

    8 function_declaration: type_specifier function_declarator ';' .

    $default  reduce using rule 8 (function_declaration)


State 20

   76 compound_statement: '{' . '}'
   77                   | '{' . block_item_list '}'

    IF              shift, and go to state 53
    FOR             shift, and go to state 54
    WHILE           shift, and go to state 55
    RETURN          shift, and go to state 56
    PRINT           shift, and go to state 57
    INC_OP          shift, and go to state 22
    DEC_OP          shift, and go to state 23
    VOID            shift, and go to state 1
    INT             shift, and go to state 2
    FLOAT           shift, and go to state 3
    STRING          shift, and go to state 4
    BOOL            shift, and go to state 5
    I_CONST         shift, and go to state 24
    F_CONST         shift, and go to state 25
    STRING_LITERAL  shift, and go to state 26
    ID              shift, and go to state 27
    TRUE            shift, and go to state 28
    FALSE           shift, and go to state 29
    ';'             shift, and go to state 58
    '('             shift, and go to state 30
    '+'             shift, and go to state 31
    '-'             shift, and go to state 32
    '!'             shift, and go to state 33
    '{'             shift, and go to state 20
    '}'             shift, and go to state 59

    variable_declaration       go to state 60
    type_specifier             go to state 61
    assignment_expression      go to state 62
    unary_expression           go to state 35
    postfix_expression         go to state 36
    primary_expression         go to state 37
    constant                   go to state 38
    expression                 go to state 63
    unary_operator             go to state 39
    conditional_expression     go to state 40
    logical_or_expression      go to state 41
    logical_and_expression     go to state 42
    equality_expression        go to state 43
    relational_expression      go to state 44
    additive_expression        go to state 45
    multiplicative_expression  go to state 46
    compound_statement         go to state 64
    block_item_list            go to state 65
    block_item                 go to state 66
    statement                  go to state 67
    expression_statement       go to state 68
    selection_statement        go to state 69
    iteration_statement        go to state 70
    jump_statement             go to state 71
    print_statement            go to state 72


State 21

   75 function_definition: type_specifier function_declarator compound_statement .

    $default  reduce using rule 75 (function_definition)


State 22

   25 unary_expression: INC_OP . unary_expression

    INC_OP          shift, and go to state 22
    DEC_OP          shift, and go to state 23
    I_CONST         shift, and go to state 24
    F_CONST         shift, and go to state 25
    STRING_LITERAL  shift, and go to state 26
    ID              shift, and go to state 27
    TRUE            shift, and go to state 28
    FALSE           shift, and go to state 29
    '('             shift, and go to state 30
    '+'             shift, and go to state 31
    '-'             shift, and go to state 32
    '!'             shift, and go to state 33

    unary_expression    go to state 73
    postfix_expression  go to state 36
    primary_expression  go to state 37
    constant            go to state 38
    unary_operator      go to state 39


State 23

   26 unary_expression: DEC_OP . unary_expression

    INC_OP          shift, and go to state 22
    DEC_OP          shift, and go to state 23
    I_CONST         shift, and go to state 24
    F_CONST         shift, and go to state 25
    STRING_LITERAL  shift, and go to state 26
    ID              shift, and go to state 27
    TRUE            shift, and go to state 28
    FALSE           shift, and go to state 29
    '('             shift, and go to state 30
    '+'             shift, and go to state 31
    '-'             shift, and go to state 32
    '!'             shift, and go to state 33

    unary_expression    go to state 74
    postfix_expression  go to state 36
    primary_expression  go to state 37
    constant            go to state 38
    unary_operator      go to state 39


State 24

   36 constant: I_CONST .

    $default  reduce using rule 36 (constant)


State 25

   37 constant: F_CONST .

    $default  reduce using rule 37 (constant)


State 26

   40 constant: STRING_LITERAL .

    $default  reduce using rule 40 (constant)


State 27

   33 primary_expression: ID .

    $default  reduce using rule 33 (primary_expression)


State 28

   38 constant: TRUE .

    $default  reduce using rule 38 (constant)


State 29

   39 constant: FALSE .

    $default  reduce using rule 39 (constant)


State 30

   35 primary_expression: '(' . expression ')'

    INC_OP          shift, and go to state 22
    DEC_OP          shift, and go to state 23
    I_CONST         shift, and go to state 24
    F_CONST         shift, and go to state 25
    STRING_LITERAL  shift, and go to state 26
    ID              shift, and go to state 27
    TRUE            shift, and go to state 28
    FALSE           shift, and go to state 29
    '('             shift, and go to state 30
    '+'             shift, and go to state 31
    '-'             shift, and go to state 32
    '!'             shift, and go to state 33

    assignment_expression      go to state 62
    unary_expression           go to state 35
    postfix_expression         go to state 36
    primary_expression         go to state 37
    constant                   go to state 38
    expression                 go to state 75
    unary_operator             go to state 39
    conditional_expression     go to state 40
    logical_or_expression      go to state 41
    logical_and_expression     go to state 42
    equality_expression        go to state 43
    relational_expression      go to state 44
    additive_expression        go to state 45
    multiplicative_expression  go to state 46


State 31

   45 unary_operator: '+' .

    $default  reduce using rule 45 (unary_operator)


State 32

   46 unary_operator: '-' .

    $default  reduce using rule 46 (unary_operator)


State 33

   47 unary_operator: '!' .

    $default  reduce using rule 47 (unary_operator)


State 34

    7 variable_declaration: type_specifier ID '=' assignment_expression . ';'

    ';'  shift, and go to state 76


State 35

   22 assignment_expression: unary_expression . assignment_operator assignment_expression
   71 multiplicative_expression: unary_expression .

    ADD_ASSIGN  shift, and go to state 77
    SUB_ASSIGN  shift, and go to state 78
    MUL_ASSIGN  shift, and go to state 79
    DIV_ASSIGN  shift, and go to state 80
    MOD_ASSIGN  shift, and go to state 81
    '='         shift, and go to state 82

    $default  reduce using rule 71 (multiplicative_expression)

    assignment_operator  go to state 83


State 36

   24 unary_expression: postfix_expression .
   29 postfix_expression: postfix_expression . '(' ')'
   30                   | postfix_expression . '(' argument_expression_list ')'
   31                   | postfix_expression . INC_OP
   32                   | postfix_expression . DEC_OP

    INC_OP  shift, and go to state 84
    DEC_OP  shift, and go to state 85
    '('     shift, and go to state 86

    $default  reduce using rule 24 (unary_expression)


State 37

   28 postfix_expression: primary_expression .

    $default  reduce using rule 28 (postfix_expression)


State 38

   34 primary_expression: constant .

    $default  reduce using rule 34 (primary_expression)


State 39

   27 unary_expression: unary_operator . unary_expression

    INC_OP          shift, and go to state 22
    DEC_OP          shift, and go to state 23
    I_CONST         shift, and go to state 24
    F_CONST         shift, and go to state 25
    STRING_LITERAL  shift, and go to state 26
    ID              shift, and go to state 27
    TRUE            shift, and go to state 28
    FALSE           shift, and go to state 29
    '('             shift, and go to state 30
    '+'             shift, and go to state 31
    '-'             shift, and go to state 32
    '!'             shift, and go to state 33

    unary_expression    go to state 87
    postfix_expression  go to state 36
    primary_expression  go to state 37
    constant            go to state 38
    unary_operator      go to state 39


State 40

   23 assignment_expression: conditional_expression .

    $default  reduce using rule 23 (assignment_expression)


State 41

   54 conditional_expression: logical_or_expression .
   55                       | logical_or_expression . '?' expression ':' conditional_expression
   57 logical_or_expression: logical_or_expression . OR_OP logical_and_expression

    OR_OP  shift, and go to state 88
    '?'    shift, and go to state 89

    $default  reduce using rule 54 (conditional_expression)


State 42

   56 logical_or_expression: logical_and_expression .
   59 logical_and_expression: logical_and_expression . AND_OP equality_expression

    AND_OP  shift, and go to state 90

    $default  reduce using rule 56 (logical_or_expression)


State 43

   58 logical_and_expression: equality_expression .
   61 equality_expression: equality_expression . EQ_OP relational_expression
   62                    | equality_expression . NE_OP relational_expression

    EQ_OP  shift, and go to state 91
    NE_OP  shift, and go to state 92

    $default  reduce using rule 58 (logical_and_expression)


State 44

   60 equality_expression: relational_expression .
   64 relational_expression: relational_expression . '<' additive_expression
   65                      | relational_expression . '>' additive_expression
   66                      | relational_expression . LE_OP additive_expression
   67                      | relational_expression . GE_OP additive_expression

    GE_OP  shift, and go to state 93
    LE_OP  shift, and go to state 94
    '<'    shift, and go to state 95
    '>'    shift, and go to state 96

    $default  reduce using rule 60 (equality_expression)


State 45

   63 relational_expression: additive_expression .
   69 additive_expression: additive_expression . '+' multiplicative_expression
   70                    | additive_expression . '-' multiplicative_expression

    '+'  shift, and go to state 97
    '-'  shift, and go to state 98

    $default  reduce using rule 63 (relational_expression)


State 46

   68 additive_expression: multiplicative_expression .
   72 multiplicative_expression: multiplicative_expression . '*' unary_expression
   73                          | multiplicative_expression . '/' unary_expression
   74                          | multiplicative_expression . '%' unary_expression

    '*'  shift, and go to state 99
    '/'  shift, and go to state 100
    '%'  shift, and go to state 101

    $default  reduce using rule 68 (additive_expression)


State 47

   17 identifier_list: ID .

    $default  reduce using rule 17 (identifier_list)


State 48

   14 function_declarator: ID '(' ')' .

    $default  reduce using rule 14 (function_declarator)


State 49

   21 parameter_declarator: type_specifier . ID

    ID  shift, and go to state 102


State 50

   15 function_declarator: ID '(' identifier_list . ')'
   18 identifier_list: identifier_list . ',' ID

    ')'  shift, and go to state 103
    ','  shift, and go to state 104


State 51

   16 function_declarator: ID '(' parameter_list . ')'
   20 parameter_list: parameter_list . ',' parameter_declarator

    ')'  shift, and go to state 105
    ','  shift, and go to state 106


State 52

   19 parameter_list: parameter_declarator .

    $default  reduce using rule 19 (parameter_list)


State 53

   90 selection_statement: IF . '(' expression ')' statement
   91                    | IF . '(' expression ')' statement ELSE statement

    '('  shift, and go to state 107


State 54

   93 iteration_statement: FOR . '(' expression_statement expression_statement ')' statement
   94                    | FOR . '(' expression_statement expression_statement expression ')' statement
   95                    | FOR . '(' variable_declaration expression_statement ')' statement
   96                    | FOR . '(' variable_declaration expression_statement expression ')' statement

    '('  shift, and go to state 108


State 55

   92 iteration_statement: WHILE . '(' expression ')' statement

    '('  shift, and go to state 109


State 56

   97 jump_statement: RETURN . ';'
   98               | RETURN . expression ';'

    INC_OP          shift, and go to state 22
    DEC_OP          shift, and go to state 23
    I_CONST         shift, and go to state 24
    F_CONST         shift, and go to state 25
    STRING_LITERAL  shift, and go to state 26
    ID              shift, and go to state 27
    TRUE            shift, and go to state 28
    FALSE           shift, and go to state 29
    ';'             shift, and go to state 110
    '('             shift, and go to state 30
    '+'             shift, and go to state 31
    '-'             shift, and go to state 32
    '!'             shift, and go to state 33

    assignment_expression      go to state 62
    unary_expression           go to state 35
    postfix_expression         go to state 36
    primary_expression         go to state 37
    constant                   go to state 38
    expression                 go to state 111
    unary_operator             go to state 39
    conditional_expression     go to state 40
    logical_or_expression      go to state 41
    logical_and_expression     go to state 42
    equality_expression        go to state 43
    relational_expression      go to state 44
    additive_expression        go to state 45
    multiplicative_expression  go to state 46


State 57

   99 print_statement: PRINT . '(' ID ')' ';'
  100                | PRINT . '(' STRING_LITERAL ')' ';'

    '('  shift, and go to state 112


State 58

   88 expression_statement: ';' .

    $default  reduce using rule 88 (expression_statement)


State 59

   76 compound_statement: '{' '}' .

    $default  reduce using rule 76 (compound_statement)


State 60

   80 block_item: variable_declaration .

    $default  reduce using rule 80 (block_item)


State 61

    6 variable_declaration: type_specifier . ID ';'
    7                     | type_specifier . ID '=' assignment_expression ';'

    ID  shift, and go to state 113


State 62

   41 expression: assignment_expression .

    $default  reduce using rule 41 (expression)


State 63

   42 expression: expression . ',' assignment_expression
   89 expression_statement: expression . ';'

    ';'  shift, and go to state 114
    ','  shift, and go to state 115


State 64

   82 statement: compound_statement .

    $default  reduce using rule 82 (statement)


State 65

   77 compound_statement: '{' block_item_list . '}'
   79 block_item_list: block_item_list . block_item

    IF              shift, and go to state 53
    FOR             shift, and go to state 54
    WHILE           shift, and go to state 55
    RETURN          shift, and go to state 56
    PRINT           shift, and go to state 57
    INC_OP          shift, and go to state 22
    DEC_OP          shift, and go to state 23
    VOID            shift, and go to state 1
    INT             shift, and go to state 2
    FLOAT           shift, and go to state 3
    STRING          shift, and go to state 4
    BOOL            shift, and go to state 5
    I_CONST         shift, and go to state 24
    F_CONST         shift, and go to state 25
    STRING_LITERAL  shift, and go to state 26
    ID              shift, and go to state 27
    TRUE            shift, and go to state 28
    FALSE           shift, and go to state 29
    ';'             shift, and go to state 58
    '('             shift, and go to state 30
    '+'             shift, and go to state 31
    '-'             shift, and go to state 32
    '!'             shift, and go to state 33
    '{'             shift, and go to state 20
    '}'             shift, and go to state 116

    variable_declaration       go to state 60
    type_specifier             go to state 61
    assignment_expression      go to state 62
    unary_expression           go to state 35
    postfix_expression         go to state 36
    primary_expression         go to state 37
    constant                   go to state 38
    expression                 go to state 63
    unary_operator             go to state 39
    conditional_expression     go to state 40
    logical_or_expression      go to state 41
    logical_and_expression     go to state 42
    equality_expression        go to state 43
    relational_expression      go to state 44
    additive_expression        go to state 45
    multiplicative_expression  go to state 46
    compound_statement         go to state 64
    block_item                 go to state 117
    statement                  go to state 67
    expression_statement       go to state 68
    selection_statement        go to state 69
    iteration_statement        go to state 70
    jump_statement             go to state 71
    print_statement            go to state 72


State 66

   78 block_item_list: block_item .

    $default  reduce using rule 78 (block_item_list)


State 67

   81 block_item: statement .

    $default  reduce using rule 81 (block_item)


State 68

   83 statement: expression_statement .

    $default  reduce using rule 83 (statement)


State 69

   84 statement: selection_statement .

    $default  reduce using rule 84 (statement)


State 70

   85 statement: iteration_statement .

    $default  reduce using rule 85 (statement)


State 71

   86 statement: jump_statement .

    $default  reduce using rule 86 (statement)


State 72

   87 statement: print_statement .

    $default  reduce using rule 87 (statement)


State 73

   25 unary_expression: INC_OP unary_expression .

    $default  reduce using rule 25 (unary_expression)


State 74

   26 unary_expression: DEC_OP unary_expression .

    $default  reduce using rule 26 (unary_expression)


State 75

   35 primary_expression: '(' expression . ')'
   42 expression: expression . ',' assignment_expression

    ')'  shift, and go to state 118
    ','  shift, and go to state 115


State 76

    7 variable_declaration: type_specifier ID '=' assignment_expression ';' .

    $default  reduce using rule 7 (variable_declaration)


State 77

   52 assignment_operator: ADD_ASSIGN .

    $default  reduce using rule 52 (assignment_operator)


State 78

   53 assignment_operator: SUB_ASSIGN .

    $default  reduce using rule 53 (assignment_operator)


State 79

   49 assignment_operator: MUL_ASSIGN .

    $default  reduce using rule 49 (assignment_operator)


State 80

   50 assignment_operator: DIV_ASSIGN .

    $default  reduce using rule 50 (assignment_operator)


State 81

   51 assignment_operator: MOD_ASSIGN .

    $default  reduce using rule 51 (assignment_operator)


State 82

   48 assignment_operator: '=' .

    $default  reduce using rule 48 (assignment_operator)


State 83

   22 assignment_expression: unary_expression assignment_operator . assignment_expression

    INC_OP          shift, and go to state 22
    DEC_OP          shift, and go to state 23
    I_CONST         shift, and go to state 24
    F_CONST         shift, and go to state 25
    STRING_LITERAL  shift, and go to state 26
    ID              shift, and go to state 27
    TRUE            shift, and go to state 28
    FALSE           shift, and go to state 29
    '('             shift, and go to state 30
    '+'             shift, and go to state 31
    '-'             shift, and go to state 32
    '!'             shift, and go to state 33

    assignment_expression      go to state 119
    unary_expression           go to state 35
    postfix_expression         go to state 36
    primary_expression         go to state 37
    constant                   go to state 38
    unary_operator             go to state 39
    conditional_expression     go to state 40
    logical_or_expression      go to state 41
    logical_and_expression     go to state 42
    equality_expression        go to state 43
    relational_expression      go to state 44
    additive_expression        go to state 45
    multiplicative_expression  go to state 46


State 84

   31 postfix_expression: postfix_expression INC_OP .

    $default  reduce using rule 31 (postfix_expression)


State 85

   32 postfix_expression: postfix_expression DEC_OP .

    $default  reduce using rule 32 (postfix_expression)


State 86

   29 postfix_expression: postfix_expression '(' . ')'
   30                   | postfix_expression '(' . argument_expression_list ')'

    INC_OP          shift, and go to state 22
    DEC_OP          shift, and go to state 23
    I_CONST         shift, and go to state 24
    F_CONST         shift, and go to state 25
    STRING_LITERAL  shift, and go to state 26
    ID              shift, and go to state 27
    TRUE            shift, and go to state 28
    FALSE           shift, and go to state 29
    '('             shift, and go to state 30
    ')'             shift, and go to state 120
    '+'             shift, and go to state 31
    '-'             shift, and go to state 32
    '!'             shift, and go to state 33

    assignment_expression      go to state 121
    unary_expression           go to state 35
    postfix_expression         go to state 36
    primary_expression         go to state 37
    constant                   go to state 38
    argument_expression_list   go to state 122
    unary_operator             go to state 39
    conditional_expression     go to state 40
    logical_or_expression      go to state 41
    logical_and_expression     go to state 42
    equality_expression        go to state 43
    relational_expression      go to state 44
    additive_expression        go to state 45
    multiplicative_expression  go to state 46


State 87

   27 unary_expression: unary_operator unary_expression .

    $default  reduce using rule 27 (unary_expression)


State 88

   57 logical_or_expression: logical_or_expression OR_OP . logical_and_expression

    INC_OP          shift, and go to state 22
    DEC_OP          shift, and go to state 23
    I_CONST         shift, and go to state 24
    F_CONST         shift, and go to state 25
    STRING_LITERAL  shift, and go to state 26
    ID              shift, and go to state 27
    TRUE            shift, and go to state 28
    FALSE           shift, and go to state 29
    '('             shift, and go to state 30
    '+'             shift, and go to state 31
    '-'             shift, and go to state 32
    '!'             shift, and go to state 33

    unary_expression           go to state 123
    postfix_expression         go to state 36
    primary_expression         go to state 37
    constant                   go to state 38
    unary_operator             go to state 39
    logical_and_expression     go to state 124
    equality_expression        go to state 43
    relational_expression      go to state 44
    additive_expression        go to state 45
    multiplicative_expression  go to state 46


State 89

   55 conditional_expression: logical_or_expression '?' . expression ':' conditional_expression

    INC_OP          shift, and go to state 22
    DEC_OP          shift, and go to state 23
    I_CONST         shift, and go to state 24
    F_CONST         shift, and go to state 25
    STRING_LITERAL  shift, and go to state 26
    ID              shift, and go to state 27
    TRUE            shift, and go to state 28
    FALSE           shift, and go to state 29
    '('             shift, and go to state 30
    '+'             shift, and go to state 31
    '-'             shift, and go to state 32
    '!'             shift, and go to state 33

    assignment_expression      go to state 62
    unary_expression           go to state 35
    postfix_expression         go to state 36
    primary_expression         go to state 37
    constant                   go to state 38
    expression                 go to state 125
    unary_operator             go to state 39
    conditional_expression     go to state 40
    logical_or_expression      go to state 41
    logical_and_expression     go to state 42
    equality_expression        go to state 43
    relational_expression      go to state 44
    additive_expression        go to state 45
    multiplicative_expression  go to state 46


State 90

   59 logical_and_expression: logical_and_expression AND_OP . equality_expression

    INC_OP          shift, and go to state 22
    DEC_OP          shift, and go to state 23
    I_CONST         shift, and go to state 24
    F_CONST         shift, and go to state 25
    STRING_LITERAL  shift, and go to state 26
    ID              shift, and go to state 27
    TRUE            shift, and go to state 28
    FALSE           shift, and go to state 29
    '('             shift, and go to state 30
    '+'             shift, and go to state 31
    '-'             shift, and go to state 32
    '!'             shift, and go to state 33

    unary_expression           go to state 123
    postfix_expression         go to state 36
    primary_expression         go to state 37
    constant                   go to state 38
    unary_operator             go to state 39
    equality_expression        go to state 126
    relational_expression      go to state 44
    additive_expression        go to state 45
    multiplicative_expression  go to state 46


State 91

   61 equality_expression: equality_expression EQ_OP . relational_expression

    INC_OP          shift, and go to state 22
    DEC_OP          shift, and go to state 23
    I_CONST         shift, and go to state 24
    F_CONST         shift, and go to state 25
    STRING_LITERAL  shift, and go to state 26
    ID              shift, and go to state 27
    TRUE            shift, and go to state 28
    FALSE           shift, and go to state 29
    '('             shift, and go to state 30
    '+'             shift, and go to state 31
    '-'             shift, and go to state 32
    '!'             shift, and go to state 33

    unary_expression           go to state 123
    postfix_expression         go to state 36
    primary_expression         go to state 37
    constant                   go to state 38
    unary_operator             go to state 39
    relational_expression      go to state 127
    additive_expression        go to state 45
    multiplicative_expression  go to state 46


State 92

   62 equality_expression: equality_expression NE_OP . relational_expression

    INC_OP          shift, and go to state 22
    DEC_OP          shift, and go to state 23
    I_CONST         shift, and go to state 24
    F_CONST         shift, and go to state 25
    STRING_LITERAL  shift, and go to state 26
    ID              shift, and go to state 27
    TRUE            shift, and go to state 28
    FALSE           shift, and go to state 29
    '('             shift, and go to state 30
    '+'             shift, and go to state 31
    '-'             shift, and go to state 32
    '!'             shift, and go to state 33
